# apis-data-explorer

./: LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: publish.yml
apis_data_explorer/: apps.py  urls.py  views.py
apis_data_explorer/static/apis_data_explorer/: app.css
apis_data_explorer/templates/apis_data_explorer/: base.html  home.html
apis_data_explorer/templates/partials/: search_result_card.html
apis_data_explorer/templatetags/: search_tags.py
sample_project/: apps.py  checks.py  models.py  settings.py  urls.py
sample_project/management/commands/: populate_sample_data.py
sample_project/migrations/: 0001_initial.py
