[project]
name = "apis-data-explorer"
version = "0.0.9"
description = "A generic, customisable data explorer for APIS instances"
readme = "README.md"
authors = [
    { name = "Saranya Balasubramanian", email = "saranya.balasubramanian@oeaw.ac.at" }
]
requires-python = ">=3.13"
dependencies = [
    "apis-acdhch-default-settings==2.20.0",
    "apis-core-rdf==0.65.1",
    "apis-data-projection>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "faker>=40.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
